# ezquake-source

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.ps1  bspfile.h  build-linux.sh  cl_main.c  cl_parse.c  client.h  common.h  ezQuake.vcxproj  ezQuake.vcxproj.filters  hud_teaminfo.c  r_refrag.c  r_texture_load.c  vcpkg.json
.github/workflows/: build-and-deploy-release.yml  build-and-deploy-snapshots.yml  build-targets.yml  codeql-analysis.yml  ezq-gh.yml  main.yml  static-build.yml
.github/workflows/scripts/: homebrew.sh
cmake/: AddResources.cmake  CheckDependency.cmake  GitUtils.cmake
misc/docs/: COMPILING_FOR_WINDOWS.md  COMPILING_ON_OSX.md
misc/vstudio/txt2c/: txt2c.cpp
src/: bspfile.h  central.c  cl_ents.c  cl_main.c  cl_parse.c  cmd.c  common.c  common.h  cvar.c  fs.c  g_public.h  glc_brushmodel.c  glm_aliasmodel.c  glm_local.h  glm_rmain.c  glm_rsurf.c  in_osx.m  linux_signals.c  net.c  net_chan.c  parser.c  pr2_cmds.c  pr_cmds.c  pr_edict.c  progs.h  quakedef.h  qwsvdef.h  r_aliasmodel.c  r_brushmodel.c  r_brushmodel.h  r_brushmodel_load.c  r_lightmaps.c  r_local.h  r_main.c  r_model.c  r_renderer_structure.h  r_rmain.c  r_states.c  r_texture.c  r_texture_internal.h  (+30 more)
src/glsl/: draw_world.fragment.glsl  draw_world.vertex.glsl
